web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/layout/Layout.module.css
.layout {
    display: flex;
    flex-direction: column;
}

/* Modal */
.modal {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 100vh;
}

.modal::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: linear-gradient(120deg, rgba(17,17,17,1) 0%, rgba(160,160,160,0) 44%, rgba(223,223,223,1) 74%, rgba(255,255,255,1) 90%);
    filter: blur(1rem);
    opacity: 0.65;
    z-index: -1;
}

.modalContent {
    width: 98vw;
    margin: 2rem auto;
    padding: 2rem;
    height: 100%;
    max-height: 80vh;
    background: linear-gradient(120deg, rgba(223,236,249,1) 0%, rgba(255,255,255,1) 35%, rgba(223,236,249,1) 62%, rgba(255,255,255,1) 100%);
    position: relative;
    z-index: 1;
}

/* Modal Callout */
.modalCallout {
    padding: 2rem;
    background-color: hsl(210, 100%, 21%);
}

.modalCalloutContent {
    max-width: 80%;
    margin: 0 auto;
    color: white;
}

.modalCalloutContent p {
    max-width: 80ch;
}

.modalCalloutContent button {
    font-size: 1.2rem;
    font-weight: 600;
    background-color: white;
    color: hsl(210, 100%, 21%);
    border: none;
    padding: 1rem 2rem;

}
/* Header */
.header {
    padding: 1rem;
}


@media screen and (min-width:800px) {
    .header {
        padding: 1rem 4rem 3rem;
    }
}

.headerContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1100px;
    margin: 0 auto;
}

.headerTitleContainer {
    display: flex;
    align-items: center;
    margin-left: 14px;
    text-decoration: none;
}

.headerTitle {
    font-style: normal;
    font-weight: 800;
    font-size: 2rem;
    line-height: 1.2;
    display: flex;
    align-items: flex-end;
    color: hsl(210, 100%, 21%);
}

.headerIcon {
    height: 32px;
    width: 32px;
    margin-left: 36px;
}

.urlTextBox {
    font-style: normal;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1;
    color: #707070;
    border: 1px solid #D1D1D1;
    border-radius: 4px;
}

.copyButtonContainer {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 5px 12px;
    gap: 4px;
    background: #FFFFFF;
    border: 1px solid #D1D1D1;
    border-radius: 4px;
}

button.closeButton {
    background-color: transparent;
    border: none;
}

button.closeButton:focus-visible {
    outline: 1px solid #222;
}

